gcc/testsuite/algol68/compile/error-supper-5.a68
# { dg-options {-fstropping=supper} }  #

begin int foo__ = 10; # { dg-error "unworthy" }  #
      skip
end
